Fixed comment format for contributor card

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <!-- ________ mahi Contributor card START ________  -->
       <div class="card">
              <p class="name">Mahi Korrapati</p>
               <p class="contact">
@@ -139,7 +139,7 @@
                   </ul>
               </div>
           </div>
-             <!-- ________ *TEMPLATE* Contributor card END ________  -->
+             <!-- ________ mahi Contributor card END ________  -->
 
         <!-- ________ YDvlpr card START ________  -->
         <div class="card">
