Added @Ranojoy1020 card

--- a/index.html
+++ b/index.html
@@ -4664,6 +4664,36 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+
+        <!-- ________ Ranojoy1020 card START ________  -->
+        <div class="card">
+          <p class="name">Ranojoy Banerjee</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rbanerjee2010/" target="_blank">Ranojoy Banerjee </a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Ranojoy1020" target="_blank">@Ranojoy1020</a>
+          </p>
+          <p class="about">
+            A software developer, made college and personal projects, now learning to contribute to open source.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="http://www.youtube.com/" target="_blank" title="First Resource">Youtube</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksForGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ranojoy1020 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
