Adiciona meu cartao de contribuicao

--- a/index.html
+++ b/index.html
@@ -4664,6 +4664,39 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ MatHerman card START ________  -->
+        <div class="card">
+          <p class="name">Matheus Herman</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://github.com/mathermansales" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/mathermansales" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Full-Stack Developer Learning HTML/CSS/JavaScript</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank" title="First Resource">
+                  HTML documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank" title="Second Resource">
+                  CSS documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" title="Third resource">
+                  JavaScript documentation
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ MatHerman card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
