Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ kartikj card START ________  -->
+        <div class="card">
+          <p class="name">Kartik Jain</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/kartik-ja" target="_blank">kartik-ja</a>
+          </p>
+          <p class="about">Full Stack Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@TraversyMedia" target="_blank" title="First Resource">Traversy Media - great for crash courses in all things web</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development" target="_blank" title="Second Resource">mozilla's Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools - Learn Web Development</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ kl2400033266 card START ________ -->
         <div class="card">
           <p class="name">kl2400033266</p>
