--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Alejandro Vaz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/alejandro__vaz" target="_blank">alejandro__vaz</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/alejandro-vaz" target="_blank">alejandro-vaz</a>
+          </p>
+          <p class="about">trying to figure out how to contribute to OSS rn honestly</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@soydalto" target="_blank" title="First Resource">Dalto</a>
+              </li>
+              <li>
+                <a href="https://doc.rust-lang.org/book/" target="_blank" title="Second Resource">Rust docs</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com" target="_blank" title="Third resource">Teacher</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ kl2400033266 card START ________ -->
         <div class="card">
           <p class="name">kl2400033266</p>
