Add HaitamGM card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *HaitamGM* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Haitam Gmira</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/GmiraHaitam" target="_blank">GmiraHaitam</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/HaitamGM" target="_blank">HaitamGM</a>
+          </p>
+          <p class="about">Data scientist delevering effective multi-domain Machine Learning models and Generative AI solutions for buisness-oriented problem. I'm also a Product builder, a cali athlete and I love animals :3</p>
+          <div class="resources">
+            <p>3 Useful Data Science Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=uakGF0DP-mk&t=3s" target="_blank" title="Roadmap to become a Data scientist">Roadmap to Data science</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@johnnyharris" target="_blank" title="Youtube channel">Youtuber and Journalist I love</a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com/" target="_blank" title="Community and Platform">Best platform for AI & Datascience</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *HaitamGM* Contributor card END ________  -->
+
         <!-- ________ rohan-shridhar card START ________  -->
         <div class="card">
           <p class="name">Rohan Shridhar</p>
