--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- _________ Prince card START ________  -->
+        <div class="card">
+          <p class="name">Prince Gupta</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/princegupta-in" target="_blank">princegupta-in</a>
+          </p>
+          <p class="about">i am prince gupta, a full stack developer kick-starting my open source journey form today 10Dec'25</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Prince card END ________  -->
+
+
         <!-- ________ kartikj card START ________  -->
         <div class="card">
           <p class="name">Kartik Jain</p>
