--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://www.youtube.com/@chaiaurcode" target="_blank" title="First Resource">Chai aur Code</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.youtube.com/@harkirat1" target="_blank" title="Second Resource">Harkirat Singh 2</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN</a>
               </li>
             </ul>
           </div>
