--- a/index.html
+++ b/index.html
@@ -2747,6 +2747,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *afom12* Contributor card START ________ -->
+        <div class="card">
+          <p class="name">Afomiya Ketsella</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/afom12" target="_blank">@afom12</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/afom12" target="_blank">afom12</a>
+          </p>
+          <p class="about">I am a software developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Free online courses in full stack development">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="Comprehensive web development documentation and tutorials">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://github.com" target="_blank" title="Code hosting platform for version control and collaboration">GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *afom12* Contributor card END ________ -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
