--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/lorishui" target="_blank">LoriShui</a>
           </p>
-          <p class="about">A programmerProgrammer, gamer, and product tinkerer — always building, exploring, and creating.</p>
+          <p class="about">A programmer, gamer, and product tinkerer — always building, exploring, and creating.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
