--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *narsky*  Contributor card START ________  -->
+        <div class="card">
+          <p class="name">narsky</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Narsky7</a>
+          </p>
+          <p class="about">I like C programming, Understanding how things work and playing Path of Exile</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="First Resource">Build your own X repo</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@LowLevelTV" target="_blank" title="Second Resource">Low Level</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Third resource">Roadmaps</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *narsky* Contributor card END ________  -->
+         
         <!-- ________ *Lori* Contributor card START ________  -->
         <div class="card">
           <p class="name">Lori</p>
