--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Ankit* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ankit.js</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/sezzwaan" target="_blank">sezzwan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/nogitankit" target="_blank">nogitankit</a>
+          </p>
+          <p class="about">I just LOVE tech!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://coder-coder.com/stay-motivated-learning-code/" target="_blank" title="First Resource">Programmer Motivation</a>
+              </li>
+              <li>
+                <a href="https://www.figma.com/" target="_blank" title="Second Resource">Design web pages</a>
+              </li>
+              <li>
+                <a href="https://www.postman.com/" target="_blank" title="Third resource">Postman</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Ankit* Contributor card END ________  -->
+
+
         <!-- ________ *Lori* Contributor card START ________  -->
         <div class="card">
           <p class="name">Lori</p>
