--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
          <!--____Praveenitis card STARTS-->
          <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Praveen G</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/Praveen" target="_blank">Praveen G U</a>
