--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Maeruf Mohammed</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank"></a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/hu-maeruf" target="_blank">hu-maeruf</a>
+          </p>
+          <p class="about">
+            I am interested in tech. This is my first open source contribution. The start of something big.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="TOP">TOP</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="free code camp">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@teluskoalien" target="_blank" title="Telusko">Telusko</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ rohan-shridhar card START ________  -->
         <div class="card">
           <p class="name">Rohan Shridhar</p>
