Update index.html with my contribution

--- a/index.html
+++ b/index.html
@@ -240,6 +240,33 @@
           </div>
         </div>
         <!-- Aryan Contributor card END -->
+         <!--Aumlya contributer card starts-->
+         <div class="card">
+          <p class="name">Amulya</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">leetcode</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">linkedin</a>
+              </li>
+              <li>
+                <a href="https://github.com/amulya1977/" target="_blank" title="Third resource">git</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
 
         <!-- ________ *Lori* Contributor card START ________  -->
         <div class="card">
