--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
           <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-          <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+          <!-- ________ Sebastian Robles Contributor card START ________  -->
           <div class="card">
               <p class="name">Sebastian Robles</p>
               <p class="contact">
@@ -142,7 +142,7 @@
                   </ul>
               </div>
           </div>
-          <!-- ________ *TEMPLATE* Contributor card END ________  -->
+          <!-- ________ Sebastian Robles Contributor card END ________  -->
 
           <!--____Praveenitis card STARTS-->
           <div class="card">
