Added My card information

--- a/index.html
+++ b/index.html
@@ -4946,5 +4946,27 @@
         <span id="currentYear"></span>
       </footer>
     </div>
+    <!-- Lokesh Contributor card START -->
+<div class="card">
+  <p class="name">Lokesh</p>
+  <p class="contact">
+    <i class="fab fa-github"></i>
+    <a href="https://github.com/2400032210" target="_blank">2400032210</a>
+  </p>
+  <p class="about">
+    2nd Year B.Tech CSE student at KL University. Passionate about learning and coding 🧑‍💻
+  </p>
+  <div class="resources">
+    <p>1 Useful Dev Resource</p>
+    <ul>
+      <li>
+        <a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">
+          FreeCodeCamp
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- Lokesh Contributor card END -->
   </body>
 </html>
