Change card name

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ Maeruf Mohammed card START ________  -->
         <div class="card">
           <p class="name">Maeruf Mohammed</p>
           <p class="contact">
@@ -142,7 +142,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Maeruf Mohammed card END ________  -->
 
         <!-- ________ rohan-shridhar card START ________  -->
         <div class="card">
