--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Jey Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Jey</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Jey_Shiv" target="_blank">Jey_Shiv</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Jeyapaul" target="_blank">Jeyapaul</a>
+          </p>
+          <p class="about">Just an average engineer trying to make a mark.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://uiverse.io/" target="_blank" title="For your UI Components">UIVerse</a>
+              </li>
+              <li>
+                <a href="https://readme.so/" target="_blank" title="For your README">README</a>
+              </li>
+              <li>
+                <a href="https://carbon.now.sh/" target="_blank" title="Carbon">Carbon</a>
+              </li>
+              <li>
+                <a href="https://ray.so/" target="_blank" title="Ray">Ray (Alternative to Carbon)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ JeyContributor card END ________  -->
+
         <!-- Lokesh Contributor card END -->
         <div class="card">
           <p class="name">Lokesh</p>
