Add ManojKumar card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Manoj Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Manoj Kumar</p>
+          <p class="contact">
+            <i class="fa-solid fa-globe"></i>
+            <a href="https://portfolio-pink-theta-95.vercel.app/" target="_blank">Portfolio</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ManojMJ17" target="_blank">ManojMJ17</a>
+          </p>
+          <p class="about">Don't dream even in your sleep, if you're lazy</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://algomap.io/" target="_blank" title="First Resource">Algomap.io</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksForGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Manoj Contributor card END ________  -->
+
         <!-- ________ Jey Contributor card START ________  -->
         <div class="card">
           <p class="name">Jey</p>
