--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+             <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shaik Furqan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ShaikFurqan12" target="_blank">Your handle</a>
+          </p>
+          <p class="about">I am a college student with lots of intrest in contributing to open source</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@javascriptmastery" target="_blank" title="yt channel for dev">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/html/default.asp" target="_blank" title="Online learning -basic html">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://medium.com/lets-code-future/60-free-web-development-resources-i-wish-i-knew-earlier-for-devs-in-2025-c9f995f07c44" target="_blank" title="Place where all resources are bundled up">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ Jey Contributor card START ________  -->
         <div class="card">
