--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-             <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+             <!-- ________ *ShaikFurqan* Contributor card START ________  -->
         <div class="card">
           <p class="name">Shaik Furqan</p>
           <p class="contact">
@@ -128,18 +128,18 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.youtube.com/@javascriptmastery" target="_blank" title="yt channel for dev">Resource 1</a>
+                <a href="https://www.youtube.com/@javascriptmastery" target="_blank" title="yt channel for dev">JsMastery</a>
               </li>
               <li>
-                <a href="https://www.w3schools.com/html/default.asp" target="_blank" title="Online learning -basic html">Resource 2</a>
+                <a href="https://www.w3schools.com/html/default.asp" target="_blank" title="Online learning -basic html">W3-schools</a>
               </li>
               <li>
-                <a href="https://medium.com/lets-code-future/60-free-web-development-resources-i-wish-i-knew-earlier-for-devs-in-2025-c9f995f07c44" target="_blank" title="Place where all resources are bundled up">Resource 3</a>
+                <a href="https://medium.com/lets-code-future/60-free-web-development-resources-i-wish-i-knew-earlier-for-devs-in-2025-c9f995f07c44" target="_blank" title="Place where all resources are bundled up">Medium</a>
               </li>
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *ShaikFurqan* Contributor card END ________  -->
 
         <!-- ________ Jey Contributor card START ________  -->
         <div class="card">
