--- a/index.html
+++ b/index.html
@@ -3329,6 +3329,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ Raza's card START ________  -->
+        <div class="card">
+          <p class="name">Raza Khan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Razakhan_0108" target="_blank">Raza Khan_0108</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/raza-khan0108" target="_blank">Raza Khan</a>
+          </p>
+          <p class="about">I'm a full-stack developer who enjoys turning ideas into real, usable applications. I like working across the stack, building clean APIs, and learning how systems work end to end.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://reactbits.dev/" target="_blank" title="First Resource">React Bits</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Second Resource">Roadmap.sh</a>
+              </li>
+              <li>
+                <a href="https://gprm.itsvg.in/" target="_blank" title="Third resource">GPRM</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Raza's card END ________  -->
+
         <!-- ________ MainakSil's card START ________  -->
         <div class="card">
           <p class="name">Mainak Sil</p>
