--- a/index.html
+++ b/index.html
@@ -114,14 +114,13 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-             <!-- ________ *ShaikFurqan* Contributor card START ________  -->
+        
+        <!-- ________ *ShaikFurqan* Contributor card START ________  -->
         <div class="card">
           <p class="name">Shaik Furqan</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/ShaikFurqan12" target="_blank">Your handle</a>
+            <a href="https://www.github.com/ShaikFurqan12" target="_blank">ShaikFurqan</a>
           </p>
           <p class="about">I am a college student with lots of intrest in contributing to open source</p>
           <div class="resources">
@@ -140,6 +139,66 @@
           </div>
         </div>
         <!-- ________ *ShaikFurqan* Contributor card END ________  -->
+
+        <!-- ________ Sourabh Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sourabh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/sourabhX16" target="_blank">sourabhX16</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/SourabhX16" target="_blank">SourabhX16</a>
+          </p>
+          <p class="about">Learner <3</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/i16HTSt-wl4?si=Q0ZQOH7AqozeLyGd" target="_blank" title="First Resource">
+                  Video by sam ovens on productivity
+                </a>
+              </li>
+              <li>
+                <a href="https://youtu.be/c6SzMmGEPlM?si=lPYY4ei9uwQCw1mV" target="_blank" title="Second Resource">
+                  harkirat's video
+                </a>
+              </li>
+              <li>
+                <a href="https://youtu.be/uI6YZTT6BOU?si=cRv8ds4OVdwnqaTc" target="_blank" title="Third resource">
+                  motivating video by math sorcerer
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ SourabhContributor card START ________  -->
+
+        <!-- ________ Manoj Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Manoj Kumar</p>
+          <p class="contact">
+            <i class="fa-solid fa-globe"></i>
+            <a href="https://portfolio-pink-theta-95.vercel.app/" target="_blank">Portfolio</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ManojMJ17" target="_blank">ManojMJ17</a>
+          </p>
+          <p class="about">Don't dream even in your sleep, if you're lazy</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://algomap.io/" target="_blank" title="First Resource">Algomap.io</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksForGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Manoj Contributor card END ________  -->
 
         <!-- ________ Jey Contributor card START ________  -->
         <div class="card">
