--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        
+        <!-- ________ *AadarshGajula* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Aadarsh Gajula</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/aadarshgajula" target="_blank">aadarshgajula</a>
+          </p>
+          <p class="about">A 17 year old who wants to change the world with coding.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="roadmap.sh" target="_blank" title="First Resource">Roadmap.sh</a>
+              </li>
+              <li>
+                <a href="geeksforgeeks.org" target="_blank" title="Second Resource">GeeksForGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=ygXn5nV5qFc" target="_blank" title="Third resource">Python For AI</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *AadarshGajula* Contributor card END ________  -->
+        
         <!-- ________ *ShaikFurqan* Contributor card START ________  -->
         <div class="card">
           <p class="name">Shaik Furqan</p>
