Format index.html with Prettier

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -124,7 +124,10 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/raza-khan0108" target="_blank">Raza Khan</a>
           </p>
-          <p class="about">I'm a full-stack developer who enjoys turning ideas into real, usable applications. I like working across the stack, building clean APIs, and learning how systems work end to end.</p>
+          <p class="about">
+            I'm a full-stack developer who enjoys turning ideas into real, usable applications. I like working across
+            the stack, building clean APIs, and learning how systems work end to end.
+          </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
