Add contributor card for Raza Khan

--- a/index.html
+++ b/index.html
@@ -5218,6 +5218,31 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ Raza Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Raza</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Raza" target="_blank">Raza</a>
+          </p>
+          <p class="about">A passionate developer contributing to open source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com" target="_blank" title="GitHub">GitHub</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Raza Contributor card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
