--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <div class="card">
+          <p class="name">Syed Khuzema Ali</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/syed-khuzema-ali" target="_blank">syed-khuzema-ali</a>
+          </p>
+          <p class="about">I am Syed Khuzema Ali, a 16 years old ML developer from Pakistan.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codewithharry.com/blogpost/python-cheatsheet" target="_blank" title="First Resource">Python Cheatsheet</a>
+              </li>
+              <li>
+                <a href="https://htmlcheatsheet.com/" target="_blank" title="Second Resource">HTML cheatsheet</a>
+              </li>
+              <li>
+                <a href="https://fonts.google.com/" target="_blank" title="Third resource">Google fonts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        
+
         <!-- ________ *2d-game-dev* Contributor card START ________  -->
         <div class="card">
           <p class="name">2d-game-dev</p>
