--- a/index.html
+++ b/index.html
@@ -445,6 +445,35 @@
         </div>
         <!-- ________ Maeruf Mohammed card END ________  -->
 
+        <!-- ________ alsamadxd card START ________  -->
+        <div class="card">
+          <p class="name">Al Samad</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com" target="_blank"></a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/alsamadxd" target="_blank">alsamadxd</a>
+          </p>
+          <p class="about">
+            I am interested in tech. This is my first open source contribution. The start of something big.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.com" target="_blank" title="TOP">GFG</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="free code camp">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Telusko">Yt Tutorials</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ alsamadxd card END ________  -->
+
         <!--____Praveenitis card STARTS-->
         <div class="card">
           <p class="name">Praveen G</p>
