--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *ianology* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ian Freedain</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ianology" target="_blank">ianology</a>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/ian-freedain-a87595287/" target="_blank">Ian Freedain</a>
+          </p>
+          <p class="about">College Grad Looking to Start IT Career</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://d3fend.mitre.org/" target="_blank" title="MITRE Catalog of Defensive Cybersec Techniques">MITRE D3FEND</a>
+              </li>
+              <li>
+                <a href="https://pomofocus.io/" target="_blank" title="Pomodoro Timer for Managing Procrastination">Pomofocus</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *ianology* Contributor card END ________  -->
+
         <div class="card">
           <p class="name">Syed Khuzema Ali</p>
           <p class="contact">
