Add my card information.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+              <div class="card">
+          <p class="name">EKEZDU</p>
+          <p class="contact">
+            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:ekezdubusiness@gmail.com" target="_blank">ekezdubusiness@gmail.com</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ekezdu" target="_blank">EKEZDU</a>
+          </p>
+          <p class="about">Aspiring programmer and artist. Studying front and back end web development, as well as gamedev on the side.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=mDKM-JtUhhc&t=11784s" target="_blank" title="A Python course posted free on Youtube.">The complete guide to Python by Clear code</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" title="A free programming course.">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/TLG2yVpLDT8?si=0cwXFccFOqHkIJlO" target="_blank" title="A Godot course posted free on Youtube.">The new ultimate introduction to Godot by Clear Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+                <!-- ________ *EKEZDU* Contributor card END ________  -->
+
         <div class="card">
           <p class="name">Syed Khuzema Ali</p>
           <p class="contact">
@@ -3228,6 +3256,8 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+
+        
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
