'fix: update about me in laibulous card'

--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
         <div class="card">
           <p class="name">Laiba-Nadeem</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://x.com/laibulous" target="_blank">laibulous</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/laiba-nadeem-blyke/" target="_blank">laibulous</a>
             <i class="fab fa-github"></i>
             <a href="https://github.com/laibulous" target="_blank">laibulous</a>
           </p>
-          <p class="about">A software engineer & an advocate of tech for good, started exploring open source recently</p>
+          <p class="about">A software engineer in progress. My curiosity leads me to places.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://github.com/speedyapply/2026-SWE-College-Jobs?tab=readme-ov-file" target="_blank" title="First Resource">SWE College Jobs</a>
+                <a href="https://github.com/speedyapply/2026-SWE-College-Jobs?tab=readme-ov-file" target="_blank" title="a github repo about latest internships">SWE College Jobs</a>
               </li>
               <li>
-                <a href="https://github.com/EbookFoundation/free-programming-books/" target="_blank" title="Second Resource">Free Programming Books</a>
+                <a href="https://github.com/EbookFoundation/free-programming-books/" target="_blank" title="free books for devs">Free Programming Books</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/@Firebase" target="_blank" title="Third resource">Firebase YT channel</a>
+                <a href="https://www.youtube.com/@Firebase" target="_blank" title="A nice yt channel for devs">Firebase YT channel</a>
               </li>
             </ul>
           </div>
