Update contributor card comment in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *Laiba-Nadeem* Contributor card END ________  -->
 
         <!-- ________ *ShaikFurqan* Contributor card START ________  -->
         <div class="card">
