--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <p class="name">Alejandro Diaz</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://x.com/alejmaud" target="_blank">@alejmaud</a>
+            <a href="https://x.com/alejmaud" target="_blank">alejmaud</a>
             <i class="fab fa-github"></i>
             <a href="https://github.com/staticvoidmainmaui" target="_blank">staticvoidmainmaui</a>
           </p>
