--- a/index.html
+++ b/index.html
@@ -115,6 +115,51 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Sebastian Loaiza: Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sebastian Loaiza</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/loaiza-seb/" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/SebastianLoaiza10/" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Recent CS graduate looking to contribute to open source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a 
+                  href="https://github.com/SimplifyJobs/New-Grad-Positions?tab=readme-ov-file#-software-engineering-new-grad-roles/" 
+                  target="_blank" 
+                  title="Github repo for new SWE positions"
+                >
+                  New Grad SWE Jobs
+                </a>
+              </li>
+              <li>
+                <a 
+                  href="https://www.youtube.com/@BroCodez/" 
+                  target="_blank" 
+                  title="A resource I used during my C class"
+                >
+                  Programming YouTuber
+                </a>
+              </li>
+              <li>
+                <a 
+                  href="https://neetcode.io/" 
+                  target="_blank" 
+                  title="A website used to practice for SWE interviews"
+                >
+                  Neetcode
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Sebastian Loaiza* Contributor card END ________  -->
+
         <!-- ________ *Laiba-Nadeem* Contributor card START ________  -->
         <div class="card">
           <p class="name">Laiba-Nadeem</p>
