Updated 'maui's card' in index.html file

--- a/index.html
+++ b/index.html
@@ -87,33 +87,7 @@
         <!-- ================================================ -->
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
-<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Alejandro Diaz</p>
-          <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://x.com/alejmaud" target="_blank">alejmaud</a>
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/staticvoidmainmaui" target="_blank">staticvoidmainmaui</a>
-          </p>
-          <p class="about">Aspiring Engineer, ready to bring my solutions to this world and live about the place we live in</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://github.com/freeCodeCamp/how-to-contribute-to-open-source?tab=readme-ov-file#using-version-control" target="_blank" title="Guide to Open-Source contributions">Guide to Open-Source contributions</a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/pulse/google-summer-code-program-complete-application-guide-rohit-naik-vifyf/?trackingId=3AILfCfETq6BFp4BBCsI5Q%3D%3D" target="LinkedIn Post for Google Summer of Code" title="Second Resource">Google Summer of Code Program: Complete Application Guide</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=rOq1gWyz4DQ" target="_blank" title="Youtube Video on Why to specialize in CS for beginners">
-YT- A wake up call for computer science students</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
@@ -140,6 +114,34 @@ YT- A wake up call for computer science students</a>
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *staticvoidmainmaui* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Alejandro Diaz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/alejmaud" target="_blank">alejmaud</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/staticvoidmainmaui" target="_blank">staticvoidmainmaui</a>
+          </p>
+          <p class="about">Aspiring Engineer, ready to bring my solutions to this world and live about the place we live in</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/pulse/google-summer-code-program-complete-application-guide-rohit-naik-vifyf/?trackingId=3AILfCfETq6BFp4BBCsI5Q%3D%3D" target="LinkedIn Post for Google Summer of Code" title="Second Resource">Google Summer of Code Program: Complete Application Guide</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=rOq1gWyz4DQ" target="_blank" title="Youtube Video on Why to specialize in CS for beginners">
+YT- A wake up call for computer science students</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *staticvoidmainmaui* Contributor card END ________  -->
 
         <!-- ________ *ianology* Contributor card START ________  -->
         <div class="card">
