--- a/index.html
+++ b/index.html
@@ -142,6 +142,85 @@ YT- A wake up call for computer science students</a>
           </div>
         </div>
         <!-- ________ *staticvoidmainmaui* Contributor card END ________  -->
+         
+        <!-- ________ *Sanjay24-05* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">M Sanjay</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/sanjay-m-9307ba315" target="_blank">Sanjay M</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Sanjay24-05" target="_blank">Sanjay24-05</a>
+          </p>
+          <p class="about">Undergraduate Student Beginning Open Source Contribution</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Developer roadmaps and learning paths">
+                  roadmap.sh
+                </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="Official web development documentation">
+                  MDN Web Docs
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/kamranahmedse/developer-roadmap"
+                  target="_blank"
+                  title="Open-source learning paths and resources"
+                >
+                  Developer Roadmap (GitHub)
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Sanjay24-05* Contributor card END ________  -->
+
+        <!-- ________ *Laiba-Nadeem* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Laiba-Nadeem</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/laiba-nadeem-blyke/" target="_blank">laibulous</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/laibulous" target="_blank">laibulous</a>
+          </p>
+          <p class="about">A software engineer in progress. My curiosity leads me to places.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://github.com/speedyapply/2026-SWE-College-Jobs?tab=readme-ov-file"
+                  target="_blank"
+                  title="a github repo about latest internships"
+                >
+                  SWE College Jobs
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/EbookFoundation/free-programming-books/"
+                  target="_blank"
+                  title="free books for devs"
+                >
+                  Free Programming Books
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Firebase" target="_blank" title="A nice yt channel for devs">
+                  Firebase YT channel
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Laiba-Nadeem* Contributor card END ________  -->
+
 
         <!-- ________ *ianology* Contributor card START ________  -->
         <div class="card">
