Finalized "Maui's Card" to Index.html file

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://github.com/freeCodeCamp/how-to-contribute-to-open-source?tab=readme-ov-file#using-version-control" target="_blank" title="Guide to Open-Source contributions">Guide to Open-Source contributions</a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/pulse/google-summer-code-program-complete-application-guide-rohit-naik-vifyf/?trackingId=3AILfCfETq6BFp4BBCsI5Q%3D%3D" target="LinkedIn Post for Google Summer of Code" title="Second Resource">Google Summer of Code Program: Complete Application Guide</a>
