Add contributor card for Sarthak Singh

--- a/index.html
+++ b/index.html
@@ -115,6 +115,41 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *SARTHAK SINGH* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sarthak Singh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/sarthak03dot" target="_blank">sarthak03dot</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/sarthak03dot" target="_blank">sarthak03dot</a>
+          </p>
+          <p class="about">
+            SDE focused on backend and full-stack development. I enjoy building scalable web applications, working with
+            MongoDB & Node.js, and contributing to open-source projects.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/backend" target="_blank" title="Backend Developer Roadmap">
+                  Backend Developer Roadmap
+                </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://github.com/ossu/computer-science" target="_blank" title="Open Source Computer Science">
+                  OSSU Computer Science Path
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- ________ *SARTHAK SINGH* Contributor card END ________  -->
+
         <!-- ________ *kulasekara02* Contributor card START ________  -->
         <div class="card">
           <p class="name">Kulasekara02</p>
