Fix HTML comment formatting for Bearialus card

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-	<!-- ________ *Bearialus* Contributor card START ________  -->
+		  <!-- ________ *Bearialus* Contributor card START ________  -->
           <div class="card">
               <p class="name">Silvano Borea</p>
               <p class="contact">
                   <i class="fab fa-github"></i>
                   <a href="https://github.com/Bearialus" target="_blank">Bearialus</a>
-                  <i class="fa-brands fa-linkedin"></i>
+                  <i class="fab fa-linkedin"></i>
                   <a href="https://www.linkedin.com/in/silvano-borea-1a0945389" target="_blank">Silvano Borea</a>
               </p>
               <p class="about">Making a career change and loving every second of it.</p>
