Address PR review feedback.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Jogesh6895* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Jogesh Ghadai</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Jogesh6895" target="_blank">Jogesh6895</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/jogesh-kumar-ghadai" target="_blank">Jogesh Ghadai</a>
+          </p>
+          <p class="about">Software engineer specializing in backend development, APIs, and scalable systems with current interests in Generative AI</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://gemini.google.com/" target="_blank" title="Gemini">Gemini</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Chatgpt">Chatgpt</a>
+              </li>
+              <li>
+                <a href="https://claude.ai/" target="_blank" title="Claude">Claude</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Jogesh6895* Contributor card END ________  -->
+
         <!-- ________ *Bearialus* Contributor card START ________  -->
         <div class="card">
           <p class="name">Silvano Borea</p>
@@ -3334,33 +3361,6 @@
           </div>
         </div>
         <!-- ________ Hanzala's card END ________  -->
-
-        <!-- ________ Jogesh's card START ________  -->
-        <div class="card">
-          <p class="name">Jogesh Ghadai</p>
-          <p class="contact">
-            <i class="fab fa-github"></i>
-            <a href="https://www.github.com/Jogesh6895" target="_blank">Jogesh6895</a>
-            <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/jogesh-kumar-ghadai" target="_blank">Jogesh Ghadai</a>
-          </p>
-          <p class="about">Software engineer specializing in backend development, APIs, and scalable systems with current interests in Generative AI</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://gemini.google.com/" target="_blank" title="Gemini">Gemini</a>
-              </li>
-              <li>
-                <a href="https://chatgpt.com/" target="_blank" title="Chatgpt">Chatgpt</a>
-              </li>
-              <li>
-                <a href="https://claude.ai/" target="_blank" title="Claude">Claude</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ________ Jogesh's card END ________  -->
 
         <!-- ________ bjutxe's card START ________  -->
         <div class="card">
