Changes : vignesh-poovanna

--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+    
+        <!-- ________ *vignesh-poovanna* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Vignesh Poovanna</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/vigneshpoovanna" target="_blank">vigneshpoovanna</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/vignesh-poovanna" target="_blank">vignesh-poovanna</a>
+          </p>
+          <p class="about">Aspiring AI&ML Engineer passionate about building intelligent solutions through Python, Machine Learning and Innovative Design</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="geeksforgeeks">GeeksForGeeks</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Chatgpt">Chatgpt</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Leetcode">Leetcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *vignesh-poovanna* Contributor card END ________  -->
 
         <!-- ________ *Jogesh6895* Contributor card START ________  -->
         <div class="card">
@@ -5595,6 +5622,7 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+
 
         <!-- ========= END ========= -->
 
