Add card contribution for Thatoe98

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *Thatoe* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Thatoe Nyi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/thatoenyi" target="_blank">thatoenyi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Thatoe98" target="_blank">thatoenyi</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="First Resource">Best Roadmaps for all developer roles</a>
+              </li>
+              <li>
+                <a href="https://refactoring.guru/" target="_blank" title="Second Resource">Good resource for refactoring and design patterns</a>
+              </li>
+              <li>
+                <a href="https://devdocs.io/" target="_blank" title="Third resource">DevDocs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Thatoe* Contributor card END ________  -->
+
         <!-- ________ *vignesh-poovanna* Contributor card START ________  -->
         <div class="card">
           <p class="name">Vignesh Poovanna</p>
