--- a/index.html
+++ b/index.html
@@ -115,7 +115,38 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ *Aryan Pandit* Contributor card START ________  -->
+        <!-- ________ *Sirige Abhinav* Contributor card START ________  -->
+         <div class="card">
+          <p class = "name">Sirige Abhinav</p>
+          <p class="contact">
+            <i class = "fab fa-x-twitter"></i>
+            <a href ="https://x.com/Abhinav-2107" target ="_blank">Abhinav-2107</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Abhinav-2107" target = "_blank">Abhinav-2107</a>
+            
+          </p>
+          <p class ="about">
+            I am an college student studying 4th semester having skills in Full stack development
+          </p>
+          <div class = "resources">
+              <p>3 Useful Dev resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="First Resource">MDN</a>
+              </li>
+              <li>
+                <a href="https://developers.google.com/" target="_blank" title="Second Resource">Google Developers</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Third resource">
+                  Developers roadmap
+                </a>
+              </li>
+            </ul>
+            </div>
+           <!-- ________ *Sirige Abhinav* Contributor card END ________  -->
+          <!-- ________ *Aryan Pandit* Contributor card START ________  --> 
+         </div>
         <div class="card">
           <p class="name">Aryan Pandit</p>
           <p class="contact">
