--- a/index.html
+++ b/index.html
@@ -3697,6 +3697,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: Nishant's card START ________  -->
+        <div class="card">
+          <p class="name">Nishant Singh Rajawat</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/nishxrajawat" target="_blank">nishxrajawat</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ephemeral78" target="_blank">ephemeral78</a>
+          </p>
+          <p class="about">yada yada yada</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="The Odin Project: Complete guide to Web Dev">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Free online courses in full stack development">freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Roadmaps for Developers">Roadmap.sh</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Nishant's card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
